--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-codemirror": "^4.5.3",
     "axios": "^0.26.1",
+    "framer": "^2.1.1",
     "framer-motion": "^6.2.9",
     "react": "^17.0.2",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-hook-form": "^7.27.1",
