--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.26.1",
     "framer": "^2.1.1",
     "framer-motion": "^6.2.9",
+    "interweave": "^13.0.0",
     "react": "^17.0.2",
     "react-codemirror": "^1.0.0",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-hook-form": "^7.27.1",
